# conjure

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  INSTALL  Makefile  README.md  build.rs  conjure.go  detect.c  dialer.go  go.mod  go.sum  go.work  go.work.sum  loadkey.c  loadkey.h  on-reboot.sh  prereqs_once.sh  rust_foreign_interface.h  rust_util.c
.github/workflows/: build.yml  golang.yml  rust.yml
application/: Makefile  config.toml  conns.go  conns_test.go  main.go  registration_with_transport_test.go
application/detector/: Makefile  README.md  config.go  config_test.go  detector.go  detector_test.go  main.go  packets.go  packets_test.go  stats.go  stats_test.go  tracker.go  tracker_test.go
application/geoip/: geoip_test.go
application/iface/: execute.go  iface.go  iface_test.go
application/lib/: buffer_conn.go  config.go  config_test.go  conjure.go  conjure_webrtc.go  dd_selector.go  dd_selector_test.go  detector_channel.go  phantom_selector.go  phantom_selector_test.go  phantoms.go  phantoms_test.go  proxies.go  proxies_test.go  registration.go  registration_config.go  registration_config_test.go  registration_ingest.go  registration_stats.go  (+7 more)
docker/: .dockerignore  Dockerfile  README.md  detector-entrypoint.sh  docker-compose-reg.yaml  docker-compose.yaml  install_pfring_package.sh  start_zbalance_ipc.sh  zbalance-entrypoint.sh
internal/: port_integration_test.go  transport_integration_test.go
libtapdance/: Makefile  decode.c  elligator2.c  ssl_api.c  ssl_api.h  tapdance.c  tapdance.h
logging/: parse.go
paper/: Makefile  acmart.cls  background.tex  biblio.bib  figures.tex  paper.tex  rebuttal.tex  related.tex
proto/: Makefile  extensions.go  go.mod  go.sum  proto_test.go  signalling.pb.go  signalling.proto  signalling.rs
registration-api/: Caddyfile.example  Makefile  README.md  api_test.go  config.toml  main.go
script/: analyze.sh  bandwidth.gnuplot  bits.gnuplot  count-v6-bits.py  find-live.go  merit-observed.counts  parse-td.sh
scripts/: install_pfring.sh  start_application.sh  start_detector.sh  start_registrar.sh  start_registration-tracker.sh  start_zbalance_ipc.sh
src/: c_api.rs  dd_selector.rs  dtls.rs  elligator.rs  flow_tracker.rs  lib.rs  logging.rs  process_packet.rs  session.rs  sessions.rs  signalling.rs  util.rs
sysconfig/: conjure-app.service  conjure-det.service  conjure-docker.service  conjure-reg-tracker.service  conjure-reg.service  conjure-registration-api.service  conjure-registration-dns.service  conjure-registration-server.service  conjure-zmq-proxy.service  conjure.conf  conjure_regtrack.conf  geoipupdate  start_zbalance_ipc.sh  zbalance.service
tools/: test-zmq.go
util/: Makefile  cap.c  pcap-file.h
util/captool/: Cargo.toml  README.md  build.rs  periodic_capture.sh
util/captool/benches/: format_v_append.rs
util/captool/src/: capture.rs  error.rs  flows.rs  ip.rs  lib.rs  limit.rs  main.rs  packet_handler.rs  zbalance_ipc.rs  zbalance_ipc_ffi.c  zbalance_ipc_ffi.h
util/captool/src/tests/: threading.rs
zmq-proxy/: README.md  config.toml  main.go
(+360 files in other folders)
