[package]
name = "rust_dark_decoy"
version = "0.0.1"
authors = ["Eric Wustrow <ewust@colorado.edu>"]
include = ["src/*"]

[lib]
name = "rust_dark_decoy"
crate-type = ["rlib", "staticlib"]

[dependencies]
lazycell = "^0.5"
libc = "~0.2"
rust-crypto = "^0.2"
time = "*"
pnet = "0.21.0"
arrayref = "0.3.2"
log = "0.3.6"
rand = "0.4.2"
errno = "0.2.3"
radix = { git = "https://github.com/refraction-networking/radix" }
tuntap = { git = "https://github.com/ewust/tuntap.rs" }
