[package]
name = "rust_dark_decoy"
version = "0.0.1"
authors = ["Eric Wustrow <ewust@colorado.edu>"]
include = ["src/*"]
links="tapdance"
build="build.rs"

[build-dependencies]
cc="^1.0.3"


[lib]
name = "rust_dark_decoy"
crate-type = ["rlib", "staticlib"]

[dependencies]
toml = "0.5.8"
serde = "^1.0.0"
serde_derive = "^1.0.0"
lazycell = "^0.5"
libc = "~0.2"
aes-gcm = "0.8.0"
chrono = "0.4.23"
pnet = "0.31.0"
arrayref = "0.3.2"
log = "0.3.6"
rand = "0.8.5"
errno = "0.2.3"
tuntap = { git = "https://github.com/ewust/tuntap.rs" }
ipnetwork = "^0.14.0"
protobuf = "2.20.0"
hkdf = "0.7"
sha2 = "0.8.*"
hex = "0.3.*"
digest = "0.8"
zmq = "0.8"
redis = "0.10.0"
