[package]
name = "rust_dark_decoy"
version = "0.0.1"
authors = ["Eric Wustrow <ewust@colorado.edu>"]
include = ["src/*"]
links="tapdance"
build="build.rs"

[build-dependencies]
cc="^1.0.3"


[lib]
name = "rust_dark_decoy"
crate-type = ["rlib", "staticlib"]

[dependencies]
toml = "0.7"
serde = {version="1.0", features=["derive"]}
libc = "0.2"
aes-gcm = { version="0.10", features=["aes"]}
chrono = "0.4"
pnet = "0.33"
arrayref = "0.3"
log = "0.4"
rand = "0.8.5"
errno = "0.3.1"
tuntap = { git = "https://github.com/ewust/tuntap.rs" }
ipnetwork = "0.20"
protobuf = "3.2"
hkdf = "0.12"
sha2 = "0.10"
hex = "0.4"
digest = "0.10"
zmq = "0.9"
redis = "0.23"
