[package]
name = "captool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

pcap = "1.0.0"
maxminddb = "0.23.0"
ipnet = "2.7.2"
threadpool = "1.8.1"
pnet = "0.33.0"
hmac = "0.12.1"
sha2 = "*"
rand = "0.8.5"
hex = "0.4.3"
pcap-file = "2.0.0"
clap = { version = "4.2.2", features = ["derive"] }
signal-hook = "0.3.15"


[dev-dependencies]
tempfile = "3.5.0"
byteorder_slice = "3.0.0"
