[package]
name = "captool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
pcap = "1.0.0"
maxminddb = "0.23.0"
ipnet = "2.7.2"
threadpool = "1.8.1"
pnet = "0.33.0"
hmac = "0.12.1"
sha2 = "0.10.6"
rand = "0.8.5"
pcap-file = "2.0.0"
clap = { version = "4.2.2", features = ["derive"] }
signal-hook = "0.3.15"
flate2 = "1.0.25"
log = "0.4.17"
simple_logger = "4.1.0"
humantime = "2.1.0"
toml = "0.7.3"
serde = "1.0.163"

[dev-dependencies]
tempfile = "3.5.0"
byteorder_slice = "3.0.0"
hex = "0.4.3"
